escombros/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMA
    COMILLADOBLE
    COMILLASIMPLE
    CONTROLPLAGAS
    CORCHETE_A
    CORCHETE_B
    FROM
    FUN
    IMPORT
    MUESTRATIERRA
    NOT
    OR
    RETURN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> BEGIN bloque_codigo END
Rule 2     programa -> plantas BEGIN bloque_codigo END
Rule 3     programa -> bloque_codigo
Rule 4     programa -> BEGIN bloque_codigo
Rule 5     programa -> bloque_codigo END
Rule 6     bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C
Rule 7     bloque_codigo -> LLAVE_A LLAVE_C
Rule 8     lista_declaraciones -> declaracion
Rule 9     lista_declaraciones -> si
Rule 10    lista_declaraciones -> mientras
Rule 11    lista_declaraciones -> FOR
Rule 12    lista_declaraciones -> comando
Rule 13    lista_declaraciones -> lista_declaraciones lista_declaraciones
Rule 14    declaracion -> tipo ID ASIGNACION expresion PUNTOCOMA
Rule 15    declaracion -> ID ASIGNACION expresion PUNTOCOMA
Rule 16    declaracion -> tipo ID ASIGNACION expresion
Rule 17    declaracion -> tipo ID ASIGNACION PUNTOCOMA
Rule 18    declaracion -> tipo ID expresion PUNTOCOMA
Rule 19    declaracion -> tipo ID expresion
Rule 20    declaracion -> tipo ID
Rule 21    si -> IF PARENTESIS_A PARENTESIS_B bloque_codigo
Rule 22    si -> IF PARENTESIS_A expresion PARENTESIS_B
Rule 23    si -> PARENTESIS_A expresion PARENTESIS_B
Rule 24    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE
Rule 25    si -> IF expresion bloque_codigo
Rule 26    mientras -> WHILE PARENTESIS_A PARENTESIS_B bloque_codigo
Rule 27    mientras -> WHILE expresion PARENTESIS_B bloque_codigo
Rule 28    mientras -> WHILE PARENTESIS_A expresion bloque_codigo
Rule 29    mientras -> WHILE PARENTESIS_A PARENTESIS_B LLAVE_A LLAVE_C
Rule 30    mientras -> WHILE PARENTESIS_A expresion PARENTESIS_B
Rule 31    mientras -> PARENTESIS_A PARENTESIS_B
Rule 32    for_loop -> FOR PARENTESIS_A PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
Rule 33    for_loop -> FOR PARENTESIS_A for_init PUNTOCOMA PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
Rule 34    declaracion -> tipo ASIGNACION expresion PUNTOCOMA
Rule 35    bloque_codigo -> LLAVE_A
Rule 36    bloque_codigo -> lista_declaraciones LLAVE_C
Rule 37    expresion -> expresion SUMA
Rule 38    expresion -> expresion RESTA
Rule 39    expresion -> expresion MULTIPLICACION
Rule 40    expresion -> expresion DIVISION
Rule 41    expresion -> PARENTESIS_A expresion
Rule 42    expresion -> expresion PARENTESIS_B
Rule 43    expresion -> PARENTESIS_A PARENTESIS_B
Rule 44    expresion -> SUMA
Rule 45    expresion -> RESTA
Rule 46    expresion -> MULTIPLICACION
Rule 47    expresion -> DIVISION
Rule 48    comando -> MOVERADELANTE expresion PUNTOCOMA
Rule 49    comando -> VELOCIDAD PARENTESIS_A PARENTESIS_B PUNTOCOMA
Rule 50    comando -> VELOCIDAD PARENTESIS_A expresion PUNTOCOMA
Rule 51    bloque_codigo -> LLAVE_A lista_declaraciones
Rule 52    for_condicion -> PARENTESIS_A expresion PUNTOCOMA
Rule 53    tipo -> INT
Rule 54    tipo -> BOOL
Rule 55    tipo -> STG
Rule 56    tipo -> REAL
Rule 57    tipo -> COLOR
Rule 58    expresion -> expresion SUMA expresion
Rule 59    expresion -> expresion RESTA expresion
Rule 60    expresion -> expresion MULTIPLICACION expresion
Rule 61    expresion -> expresion DIVISION expresion
Rule 62    expresion -> expresion MENORQUE expresion
Rule 63    expresion -> expresion MENORIGUAL expresion
Rule 64    expresion -> expresion MAYORQUE expresion
Rule 65    expresion -> expresion MAYORIGUAL expresion
Rule 66    expresion -> expresion IGUAL expresion
Rule 67    expresion -> expresion DIFERENTE expresion
Rule 68    expresion -> PARENTESIS_A expresion PARENTESIS_B
Rule 69    expresion -> NUMERO
Rule 70    expresion -> REAL
Rule 71    expresion -> CADENA
Rule 72    expresion -> COLORRGB
Rule 73    expresion -> COLORHEX
Rule 74    expresion -> SENSORTEMPERATURA
Rule 75    expresion -> SENSORHUMEDAD
Rule 76    expresion -> SENSORPH
Rule 77    expresion -> SENSORPESO
Rule 78    expresion -> REVISARCOLOR
Rule 79    expresion -> REVISARTAMANO
Rule 80    expresion -> SENSORCONTADOR
Rule 81    expresion -> COMPARARPH
Rule 82    expresion -> COMPARARHUMEDAD
Rule 83    expresion -> COMPARARTEMP
Rule 84    expresion -> MEDIRALTURA
Rule 85    expresion -> MEDIRGLOSOR
Rule 86    expresion -> MEDIRCE
Rule 87    expresion -> TRUE
Rule 88    expresion -> FALSE
Rule 89    expresion -> ID
Rule 90    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 91    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
Rule 92    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE si
Rule 93    mientras -> WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 94    for_loop -> FOR PARENTESIS_A for_init PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
Rule 95    for_init -> tipo ID ASIGNACION expresion
Rule 96    for_init -> ID ASIGNACION expresion
Rule 97    for_condicion -> expresion
Rule 98    comando -> MOVERADELANTE PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 99    comando -> MOVERATRAS PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 100   comando -> GIRARIZQUIERDA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 101   comando -> GIRARDERECHA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 102   comando -> VELOCIDAD PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 103   comando -> GIRASENSORES PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 104   comando -> DETENER PUNTOCOMA
Rule 105   comando -> ASPERSION PUNTOCOMA
Rule 106   comando -> ALERTA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 107   comando -> APLICAR PARENTESIS_A PARENTESIS_B PUNTOCOMA
Rule 108   comando -> APLICAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 109   comando -> APLICAR PARENTESIS_A compuesto PARENTESIS_B PUNTOCOMA
Rule 110   compuesto -> INSECTICIDA
Rule 111   compuesto -> FUNGICIDA
Rule 112   compuesto -> CAL
Rule 113   compuesto -> AZUFRE
Rule 114   compuesto -> CENIZAS
Rule 115   compuesto -> TURBA
Rule 116   compuesto -> FERTILIZANTE
Rule 117   compuesto -> COMPOSTA
Rule 118   plantas -> planta
Rule 119   plantas -> plantas plantas
Rule 120   planta -> PLANTA ID bloque_parametros
Rule 121   bloque_parametros -> LLAVE_A lista_parametros LLAVE_C
Rule 122   lista_parametros -> parametro
Rule 123   lista_parametros -> lista_parametros parametro
Rule 124   parametro -> PH expresion PUNTOCOMA
Rule 125   parametro -> HUMEDAD expresion PUNTOCOMA
Rule 126   parametro -> PESO expresion PUNTOCOMA
Rule 127   parametro -> TAMANO expresion PUNTOCOMA
Rule 128   parametro -> COLOR expresion PUNTOCOMA
Rule 129   parametro -> CE expresion PUNTOCOMA
Rule 130   parametro -> RANGOTEMP expresion PUNTOCOMA
Rule 131   parametro -> RANGOHUMEDAD expresion PUNTOCOMA
Rule 132   parametro -> RANGOPH expresion PUNTOCOMA
Rule 133   expresion -> ID PUNTO PH
Rule 134   expresion -> ID PUNTO HUMEDAD
Rule 135   expresion -> ID PUNTO PESO
Rule 136   expresion -> ID PUNTO TAMANO
Rule 137   expresion -> ID PUNTO COLOR
Rule 138   expresion -> ID PUNTO CE
Rule 139   expresion -> ID PUNTO TEMPERATURA
Rule 140   comando -> REGISTRAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 141   for_actualizacion -> ID ASIGNACION expresion
Rule 142   for_actualizacion -> ID MASMAS
Rule 143   for_actualizacion -> ID MENOSMENOS

Terminals, with rules where they appear

ALERTA               : 106
AND                  : 
APLICAR              : 107 108 109
ASIGNACION           : 14 15 16 17 34 95 96 141
ASPERSION            : 105
AZUFRE               : 113
BEGIN                : 1 2 4
BOOL                 : 54
CADENA               : 71
CAL                  : 112
CE                   : 129 138
CENIZAS              : 114
COLOR                : 57 128 137
COLORHEX             : 73
COLORRGB             : 72
COMA                 : 
COMILLADOBLE         : 
COMILLASIMPLE        : 
COMPARARHUMEDAD      : 82
COMPARARPH           : 81
COMPARARTEMP         : 83
COMPOSTA             : 117
CONTROLPLAGAS        : 
CORCHETE_A           : 
CORCHETE_B           : 
DETENER              : 104
DIFERENTE            : 67
DIVISION             : 40 47 61
ELSE                 : 24 91 92
END                  : 1 2 5
FALSE                : 88
FERTILIZANTE         : 116
FOR                  : 11 32 33 94
FROM                 : 
FUN                  : 
FUNGICIDA            : 111
GIRARDERECHA         : 101
GIRARIZQUIERDA       : 100
GIRASENSORES         : 103
HUMEDAD              : 125 134
ID                   : 14 15 16 17 18 19 20 89 95 96 120 133 134 135 136 137 138 139 141 142 143
IF                   : 21 22 24 25 90 91 92
IGUAL                : 66
IMPORT               : 
INSECTICIDA          : 110
INT                  : 53
LLAVE_A              : 6 7 29 35 51 121
LLAVE_C              : 6 7 29 36 121
MASMAS               : 142
MAYORIGUAL           : 65
MAYORQUE             : 64
MEDIRALTURA          : 84
MEDIRCE              : 86
MEDIRGLOSOR          : 85
MENORIGUAL           : 63
MENORQUE             : 62
MENOSMENOS           : 143
MOVERADELANTE        : 48 98
MOVERATRAS           : 99
MUESTRATIERRA        : 
MULTIPLICACION       : 39 46 60
NOT                  : 
NUMERO               : 69
OR                   : 
PARENTESIS_A         : 21 22 23 24 26 28 29 30 31 32 33 41 43 49 50 52 68 90 91 92 93 94 98 99 100 101 102 103 106 107 108 109 140
PARENTESIS_B         : 21 22 23 24 26 27 29 30 31 32 33 42 43 49 68 90 91 92 93 94 98 99 100 101 102 103 106 107 108 109 140
PESO                 : 126 135
PH                   : 124 133
PLANTA               : 120
PUNTO                : 133 134 135 136 137 138 139
PUNTOCOMA            : 14 15 17 18 32 32 33 33 34 48 49 50 52 94 94 98 99 100 101 102 103 104 105 106 107 108 109 124 125 126 127 128 129 130 131 132 140
RANGOHUMEDAD         : 131
RANGOPH              : 132
RANGOTEMP            : 130
REAL                 : 56 70
REGISTRAR            : 140
RESTA                : 38 45 59
RETURN               : 
REVISARCOLOR         : 78
REVISARTAMANO        : 79
SENSORCONTADOR       : 80
SENSORHUMEDAD        : 75
SENSORPESO           : 77
SENSORPH             : 76
SENSORTEMPERATURA    : 74
STG                  : 55
SUMA                 : 37 44 58
TAMANO               : 127 136
TEMPERATURA          : 139
TRUE                 : 87
TURBA                : 115
VELOCIDAD            : 49 50 102
WHILE                : 26 27 28 29 30 93
error                : 

Nonterminals, with rules where they appear

bloque_codigo        : 1 2 3 4 5 21 24 25 26 27 28 32 33 90 91 91 92 93 94
bloque_parametros    : 120
comando              : 12
compuesto            : 109
declaracion          : 8
expresion            : 14 15 16 18 19 22 23 24 25 27 28 30 34 37 38 39 40 41 42 48 50 52 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 90 91 92 93 95 96 97 98 99 100 101 102 103 106 108 124 125 126 127 128 129 130 131 132 140 141
for_actualizacion    : 32 33 94
for_condicion        : 32 94
for_init             : 33 94
for_loop             : 
lista_declaraciones  : 6 13 13 36 51
lista_parametros     : 121 123
mientras             : 10
parametro            : 122 123
planta               : 118
plantas              : 2 119 119
programa             : 0
si                   : 9 92
tipo                 : 14 16 17 18 19 20 34 95

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . BEGIN bloque_codigo END
    (2) programa -> . plantas BEGIN bloque_codigo END
    (3) programa -> . bloque_codigo
    (4) programa -> . BEGIN bloque_codigo
    (5) programa -> . bloque_codigo END
    (118) plantas -> . planta
    (119) plantas -> . plantas plantas
    (6) bloque_codigo -> . LLAVE_A lista_declaraciones LLAVE_C
    (7) bloque_codigo -> . LLAVE_A LLAVE_C
    (35) bloque_codigo -> . LLAVE_A
    (36) bloque_codigo -> . lista_declaraciones LLAVE_C
    (51) bloque_codigo -> . LLAVE_A lista_declaraciones
    (120) planta -> . PLANTA ID bloque_parametros
    (8) lista_declaraciones -> . declaracion
    (9) lista_declaraciones -> . si
    (10) lista_declaraciones -> . mientras
    (11) lista_declaraciones -> . FOR
    (12) lista_declaraciones -> . comando
    (13) lista_declaraciones -> . lista_declaraciones lista_declaraciones
    (14) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (15) declaracion -> . ID ASIGNACION expresion PUNTOCOMA
    (16) declaracion -> . tipo ID ASIGNACION expresion
    (17) declaracion -> . tipo ID ASIGNACION PUNTOCOMA
    (18) declaracion -> . tipo ID expresion PUNTOCOMA
    (19) declaracion -> . tipo ID expresion
    (20) declaracion -> . tipo ID
    (34) declaracion -> . tipo ASIGNACION expresion PUNTOCOMA
    (21) si -> . IF PARENTESIS_A PARENTESIS_B bloque_codigo
    (22) si -> . IF PARENTESIS_A expresion PARENTESIS_B
    (23) si -> . PARENTESIS_A expresion PARENTESIS_B
    (24) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE
    (25) si -> . IF expresion bloque_codigo
    (90) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (91) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
    (92) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE si
    (26) mientras -> . WHILE PARENTESIS_A PARENTESIS_B bloque_codigo
    (27) mientras -> . WHILE expresion PARENTESIS_B bloque_codigo
    (28) mientras -> . WHILE PARENTESIS_A expresion bloque_codigo
    (29) mientras -> . WHILE PARENTESIS_A PARENTESIS_B LLAVE_A LLAVE_C
    (30) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B
    (31) mientras -> . PARENTESIS_A PARENTESIS_B
    (93) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (48) comando -> . MOVERADELANTE expresion PUNTOCOMA
    (49) comando -> . VELOCIDAD PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (50) comando -> . VELOCIDAD PARENTESIS_A expresion PUNTOCOMA
    (98) comando -> . MOVERADELANTE PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (99) comando -> . MOVERATRAS PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (100) comando -> . GIRARIZQUIERDA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (101) comando -> . GIRARDERECHA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (102) comando -> . VELOCIDAD PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (103) comando -> . GIRASENSORES PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (104) comando -> . DETENER PUNTOCOMA
    (105) comando -> . ASPERSION PUNTOCOMA
    (106) comando -> . ALERTA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (107) comando -> . APLICAR PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (108) comando -> . APLICAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (109) comando -> . APLICAR PARENTESIS_A compuesto PARENTESIS_B PUNTOCOMA
    (140) comando -> . REGISTRAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (53) tipo -> . INT
    (54) tipo -> . BOOL
    (55) tipo -> . STG
    (56) tipo -> . REAL
    (57) tipo -> . COLOR

    BEGIN           shift and go to state 2
    LLAVE_A         shift and go to state 6
    PLANTA          shift and go to state 8
    FOR             shift and go to state 13
    ID              shift and go to state 9
    IF              shift and go to state 16
    PARENTESIS_A    shift and go to state 17
    WHILE           shift and go to state 18
    MOVERADELANTE   shift and go to state 19
    VELOCIDAD       shift and go to state 20
    MOVERATRAS      shift and go to state 21
    GIRARIZQUIERDA  shift and go to state 22
    GIRARDERECHA    shift and go to state 23
    GIRASENSORES    shift and go to state 24
    DETENER         shift and go to state 25
    ASPERSION       shift and go to state 26
    ALERTA          shift and go to state 27
    APLICAR         shift and go to state 28
    REGISTRAR       shift and go to state 29
    INT             shift and go to state 30
    BOOL            shift and go to state 31
    STG             shift and go to state 32
    REAL            shift and go to state 33
    COLOR           shift and go to state 34

    programa                       shift and go to state 1
    bloque_codigo                  shift and go to state 3
    plantas                        shift and go to state 4
    planta                         shift and go to state 5
    lista_declaraciones            shift and go to state 7
    declaracion                    shift and go to state 10
    si                             shift and go to state 11
    mientras                       shift and go to state 12
    comando                        shift and go to state 14
    tipo                           shift and go to state 15

state 1

    (0) S' -> programa .



state 2

    (1) programa -> BEGIN . bloque_codigo END
    (4) programa -> BEGIN . bloque_codigo
    (6) bloque_codigo -> . LLAVE_A lista_declaraciones LLAVE_C
    (7) bloque_codigo -> . LLAVE_A LLAVE_C
    (35) bloque_codigo -> . LLAVE_A
    (36) bloque_codigo -> . lista_declaraciones LLAVE_C
    (51) bloque_codigo -> . LLAVE_A lista_declaraciones
    (8) lista_declaraciones -> . declaracion
    (9) lista_declaraciones -> . si
    (10) lista_declaraciones -> . mientras
    (11) lista_declaraciones -> . FOR
    (12) lista_declaraciones -> . comando
    (13) lista_declaraciones -> . lista_declaraciones lista_declaraciones
    (14) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (15) declaracion -> . ID ASIGNACION expresion PUNTOCOMA
    (16) declaracion -> . tipo ID ASIGNACION expresion
    (17) declaracion -> . tipo ID ASIGNACION PUNTOCOMA
    (18) declaracion -> . tipo ID expresion PUNTOCOMA
    (19) declaracion -> . tipo ID expresion
    (20) declaracion -> . tipo ID
    (34) declaracion -> . tipo ASIGNACION expresion PUNTOCOMA
    (21) si -> . IF PARENTESIS_A PARENTESIS_B bloque_codigo
    (22) si -> . IF PARENTESIS_A expresion PARENTESIS_B
    (23) si -> . PARENTESIS_A expresion PARENTESIS_B
    (24) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE
    (25) si -> . IF expresion bloque_codigo
    (90) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (91) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
    (92) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE si
    (26) mientras -> . WHILE PARENTESIS_A PARENTESIS_B bloque_codigo
    (27) mientras -> . WHILE expresion PARENTESIS_B bloque_codigo
    (28) mientras -> . WHILE PARENTESIS_A expresion bloque_codigo
    (29) mientras -> . WHILE PARENTESIS_A PARENTESIS_B LLAVE_A LLAVE_C
    (30) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B
    (31) mientras -> . PARENTESIS_A PARENTESIS_B
    (93) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (48) comando -> . MOVERADELANTE expresion PUNTOCOMA
    (49) comando -> . VELOCIDAD PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (50) comando -> . VELOCIDAD PARENTESIS_A expresion PUNTOCOMA
    (98) comando -> . MOVERADELANTE PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (99) comando -> . MOVERATRAS PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (100) comando -> . GIRARIZQUIERDA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (101) comando -> . GIRARDERECHA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (102) comando -> . VELOCIDAD PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (103) comando -> . GIRASENSORES PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (104) comando -> . DETENER PUNTOCOMA
    (105) comando -> . ASPERSION PUNTOCOMA
    (106) comando -> . ALERTA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (107) comando -> . APLICAR PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (108) comando -> . APLICAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (109) comando -> . APLICAR PARENTESIS_A compuesto PARENTESIS_B PUNTOCOMA
    (140) comando -> . REGISTRAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (53) tipo -> . INT
    (54) tipo -> . BOOL
    (55) tipo -> . STG
    (56) tipo -> . REAL
    (57) tipo -> . COLOR

    LLAVE_A         shift and go to state 6
    FOR             shift and go to state 13
    ID              shift and go to state 9
    IF              shift and go to state 16
    PARENTESIS_A    shift and go to state 17
    WHILE           shift and go to state 18
    MOVERADELANTE   shift and go to state 19
    VELOCIDAD       shift and go to state 20
    MOVERATRAS      shift and go to state 21
    GIRARIZQUIERDA  shift and go to state 22
    GIRARDERECHA    shift and go to state 23
    GIRASENSORES    shift and go to state 24
    DETENER         shift and go to state 25
    ASPERSION       shift and go to state 26
    ALERTA          shift and go to state 27
    APLICAR         shift and go to state 28
    REGISTRAR       shift and go to state 29
    INT             shift and go to state 30
    BOOL            shift and go to state 31
    STG             shift and go to state 32
    REAL            shift and go to state 33
    COLOR           shift and go to state 34

    bloque_codigo                  shift and go to state 35
    lista_declaraciones            shift and go to state 7
    declaracion                    shift and go to state 10
    si                             shift and go to state 11
    mientras                       shift and go to state 12
    comando                        shift and go to state 14
    tipo                           shift and go to state 15

state 3

    (3) programa -> bloque_codigo .
    (5) programa -> bloque_codigo . END

    $end            reduce using rule 3 (programa -> bloque_codigo .)
    END             shift and go to state 36


state 4

    (2) programa -> plantas . BEGIN bloque_codigo END
    (119) plantas -> plantas . plantas
    (118) plantas -> . planta
    (119) plantas -> . plantas plantas
    (120) planta -> . PLANTA ID bloque_parametros

    BEGIN           shift and go to state 38
    PLANTA          shift and go to state 8

    plantas                        shift and go to state 37
    planta                         shift and go to state 5

state 5

    (118) plantas -> planta .

    BEGIN           reduce using rule 118 (plantas -> planta .)
    PLANTA          reduce using rule 118 (plantas -> planta .)


state 6

    (6) bloque_codigo -> LLAVE_A . lista_declaraciones LLAVE_C
    (7) bloque_codigo -> LLAVE_A . LLAVE_C
    (35) bloque_codigo -> LLAVE_A .
    (51) bloque_codigo -> LLAVE_A . lista_declaraciones
    (8) lista_declaraciones -> . declaracion
    (9) lista_declaraciones -> . si
    (10) lista_declaraciones -> . mientras
    (11) lista_declaraciones -> . FOR
    (12) lista_declaraciones -> . comando
    (13) lista_declaraciones -> . lista_declaraciones lista_declaraciones
    (14) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (15) declaracion -> . ID ASIGNACION expresion PUNTOCOMA
    (16) declaracion -> . tipo ID ASIGNACION expresion
    (17) declaracion -> . tipo ID ASIGNACION PUNTOCOMA
    (18) declaracion -> . tipo ID expresion PUNTOCOMA
    (19) declaracion -> . tipo ID expresion
    (20) declaracion -> . tipo ID
    (34) declaracion -> . tipo ASIGNACION expresion PUNTOCOMA
    (21) si -> . IF PARENTESIS_A PARENTESIS_B bloque_codigo
    (22) si -> . IF PARENTESIS_A expresion PARENTESIS_B
    (23) si -> . PARENTESIS_A expresion PARENTESIS_B
    (24) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE
    (25) si -> . IF expresion bloque_codigo
    (90) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (91) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
    (92) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE si
    (26) mientras -> . WHILE PARENTESIS_A PARENTESIS_B bloque_codigo
    (27) mientras -> . WHILE expresion PARENTESIS_B bloque_codigo
    (28) mientras -> . WHILE PARENTESIS_A expresion bloque_codigo
    (29) mientras -> . WHILE PARENTESIS_A PARENTESIS_B LLAVE_A LLAVE_C
    (30) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B
    (31) mientras -> . PARENTESIS_A PARENTESIS_B
    (93) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (48) comando -> . MOVERADELANTE expresion PUNTOCOMA
    (49) comando -> . VELOCIDAD PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (50) comando -> . VELOCIDAD PARENTESIS_A expresion PUNTOCOMA
    (98) comando -> . MOVERADELANTE PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (99) comando -> . MOVERATRAS PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (100) comando -> . GIRARIZQUIERDA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (101) comando -> . GIRARDERECHA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (102) comando -> . VELOCIDAD PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (103) comando -> . GIRASENSORES PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (104) comando -> . DETENER PUNTOCOMA
    (105) comando -> . ASPERSION PUNTOCOMA
    (106) comando -> . ALERTA PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (107) comando -> . APLICAR PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (108) comando -> . APLICAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (109) comando -> . APLICAR PARENTESIS_A compuesto PARENTESIS_B PUNTOCOMA
    (140) comando -> . REGISTRAR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (53) tipo -> . INT
    (54) tipo -> . BOOL
    (55) tipo -> . STG
    (56) tipo -> . REAL
    (57) tipo -> . COLOR

  ! shift/reduce conflict for LLAVE_C resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PARENTESIS_A resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for MOVERADELANTE resolved as shift
  ! shift/reduce conflict for VELOCIDAD resolved as shift
  ! shift/reduce conflict for MOVERATRAS resolved as shift
  ! shift/reduce conflict for GIRARIZQUIERDA resolved as shift
  ! shift/reduce conflict for GIRARDERECHA resolved as shift
  ! shift/reduce conflict for GIRASENSORES resolved as shift
  ! shift/reduce conflict for DETENER resolved as shift
  ! shift/reduce conflict for ASPERSION resolved as shift
  ! shift/reduce conflict for ALERTA resolved as shift
  ! shift/reduce conflict for APLICAR resolved as shift
  ! shift/reduce conflict for REGISTRAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STG resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
    LLAVE_C         shift and go to state 40
    END             reduce using rule 35 (bloque_codigo -> LLAVE_A .)
    $end            reduce using rule 35 (bloque_codigo -> LLAVE_A .)
    ELSE            reduce using rule 35 (bloque_codigo -> LLAVE_A .)
    FOR             shift and go to state 13
    ID              shift and go to state 9
    IF              shift and go to state 16
    PARENTESIS_A    shift and go to state 17
    WHILE           shift and go to state 18
    MOVERADELANTE   shift and go to state 19
    VELOCIDAD       shift and go to state 20
    MOVERATRAS      shift and go to state 21
    GIRARIZQUIERDA  shift and go to state 22
    GIRARDERECHA    shift and go to state 23
    GIRASENSORES    shift and go to state 24
    DETENER         shift and go to state 25
    ASPERSION       shift and go to state 26
    ALERTA          shift and go to state 27
    APLICAR         shift and go to state 28
    REGISTRAR       shift and go to state 29
    INT             shift and go to state 30
    BOOL            shift and go to state 31
    STG             shift and go to state 32
    REAL            shift and go to state 33
    COLOR           shift and go to state 34
